--- a/pages/11341.html
+++ b/pages/11341.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -755,12 +755,22 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> <a class="existingWikiWord" href="/nlab/show/vacua">vacua</a> defined by Gepner model SCFTs are discussed, via <a class="existingWikiWord" href="/nlab/show/boundary+conformal+field+theory">boundary conformal field theory</a> in</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>D-branes in Gepner models</em>, Nucl.Phys. B531 (1998) 185-225 (<a href="http://arxiv.org/abs/hep-th/9712186">arXiv:hep-th/9712186</a>)</p>
+<li id="FuchsSchweigertWalcher00">
+<p><a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, J. Walcher, <em>Projections in string theory and boundary states for Gepner models</em>, Nucl.Phys. B588 (2000) 110-148 (<a href="https://arxiv.org/abs/hep-th/0003298">arXiv:hep-th/0003298</a>)</p>
+
+<p>(with emphasis on <a class="existingWikiWord" href="/nlab/show/GSO+projections">GSO projections</a>)</p>
 </li>
 
+<li id="FuchsKasteLercheLutkenSchweigert00">
+<p><a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, P. Kaste, <a class="existingWikiWord" href="/nlab/show/Wolfgang+Lerche">Wolfgang Lerche</a>, C. Lutken, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, J. Walcher, <em>Boundary Fixed Points, Enhanced Gauge Symmetry and Singular Bundles on K3</em>, Nucl.Phys.B598:57-72, 2001 (<a href="https://arxiv.org/abs/hep-th/0007145">arXiv:hep-th/0007145</a>)</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, J. Walcher, <em>Projections in string theory and boundary states for Gepner models</em>, Nucl.Phys. B588 (2000) 110-148 (<a href="https://arxiv.org/abs/hep-th/0003298">arXiv:hep-th/0003298</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Andreas+Recknagel">Andreas Recknagel</a>, <a class="existingWikiWord" href="/nlab/show/Volker+Schomerus">Volker Schomerus</a>, <em>D-branes in Gepner models</em>, Nucl.Phys. B531 (1998) 185-225 (<a href="http://arxiv.org/abs/hep-th/9712186">arXiv:hep-th/9712186</a>)</p>
 </li>
 
 <li id="BraunSchaeferNameki05">
@@ -779,14 +789,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 04:44:44.
+  Last revised on September 30, 2018 at 07:20:40.
   See the <a href="https://ncatlab.org/nlab/history/Gepner model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gepner+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gepner+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Gepner+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gepner+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gepner model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
