--- a/pages/15415.html
+++ b/pages/15415.html
@@ -308,32 +308,38 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
-
+    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
+<body>
 <ul>
-<li><a href='http://en.wikipedia.org/wiki/C._S._Seshadri'>Wikipedia entry</a></li>
+<li><a href="http://en.wikipedia.org/wiki/C._S._Seshadri">Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_bf3f911513592632aef88e8d1aefee77201b5293_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Narasimhan%E2%80%93Seshadri+theorem'>Narasimhan-Seshadri theorem</a></li>
-</ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Narasimhan-Seshadri+theorem">Narasimhan-Seshadri theorem</a></p>
+</li>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/stable+vector+bundle">stable vector bundle</a></p>
+</li>
+</ul>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
+
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 20:52:13.
+  Last revised on September 30, 2018 at 07:35:56.
   See the <a href="https://ncatlab.org/nlab/history/C. S. Seshadri" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/C.+S.+Seshadri" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/C.+S.+Seshadri/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/C.+S.+Seshadri" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/C.+S.+Seshadri" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/C.+S.+Seshadri" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/C.+S.+Seshadri/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/C.+S.+Seshadri" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/C.+S.+Seshadri" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/C. S. Seshadri/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
