--- a/pages/6727.html
+++ b/pages/6727.html
@@ -662,7 +662,7 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/John+Schwarz">John Schwarz</a>, <em>String theory origins of supersymmetry</em>, Nucl. Phys. Proc. Suppl. 101 (2001) 54-61 (<a href="http://arxiv.org/abs/hep-th/0011078">arXiv:hep-th/0011078</a>)</li>
 </ul>
 
-<p>For further developments see</p>
+<p>For discussion in the context of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a> (<a class="existingWikiWord" href="/nlab/show/boundary+conformal+field+theory">boundary conformal field theory</a>) see</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/J%C3%BCrgen+Fuchs">Jürgen Fuchs</a>, <a class="existingWikiWord" href="/nlab/show/Christoph+Schweigert">Christoph Schweigert</a>, J. Walcher, <em>Projections in string theory and boundary states for Gepner models</em>, Nucl.Phys. B588 (2000) 110-148 (<a href="https://arxiv.org/abs/hep-th/0003298">arXiv:hep-th/0003298</a>)</li>
@@ -679,14 +679,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 00:50:50.
+  Last revised on September 30, 2018 at 07:19:20.
   See the <a href="https://ncatlab.org/nlab/history/GSO projection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/GSO+projection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GSO+projection/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/GSO+projection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GSO+projection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/GSO+projection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GSO+projection/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/GSO+projection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GSO+projection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/GSO projection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
