--- a/pages/8810.html
+++ b/pages/8810.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4491/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4491/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -654,20 +654,32 @@ margin-left: 0em;
 <p>Alfonso Zamora Saiz, <em>On the stability of vector bundles</em>, Master thesis 2009 (<a class="existingWikiWord" href="/nlab/files/SaizStableBundles.pdf" title="pdf">pdf</a>)</p>
 </li>
 </ul>
+
+<p>Discussion for <a class="existingWikiWord" href="/nlab/show/equivariant+vector+bundles">equivariant vector bundles</a> is in</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/C.+S.+Seshadri">C. S. Seshadri</a>, <em>Moduli of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>π</mi></mrow><annotation encoding="application/x-tex">\pi</annotation></semantics></math>-Vector Bundles over an Algebraic Curve</em>, In: Marchionna E. (eds) Questions on Algebraic Varieties. C.I.M.E. Summer Schools, vol 51. Springer, Berlin, Heidelberg (<a href="https://doi.org/10.1007/978-3-642-11015-3_5">doi:10.1007/978-3-642-11015-3_5</a>)</p>
+</li>
+
+<li>
+<p>Oscar García-Prada, <em>Invariant connections and vortices</em>, Commun.Math. Phys. (1993) 156: 527 (<a href="https://doi.org/10.1007/BF02096862">doi:10.1007/BF02096862</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 29, 2018 at 11:10:29.
+  Last revised on September 30, 2018 at 07:35:24.
   See the <a href="https://ncatlab.org/nlab/history/stable vector bundle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+vector+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+vector+bundle/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/stable+vector+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+vector+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+vector+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+vector+bundle/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/stable+vector+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+vector+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable vector bundle/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
