--- a/pages/15269.html
+++ b/pages/15269.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -796,7 +796,7 @@ margin-left: 0em;
 
 <p>Generally, the <em>McKay correspondence</em> concerns identifications between <a class="existingWikiWord" href="/nlab/show/linear+representations">linear representations</a> of <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset SU(2)</annotation></semantics></math> with <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> of the <a class="existingWikiWord" href="/nlab/show/blow-up">blow-up</a> <a class="existingWikiWord" href="/nlab/show/resolution+of+singularities">resolution</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>X</mi><mo stretchy="false">˜</mo></mover></mrow><annotation encoding="application/x-tex">\tilde X</annotation></semantics></math> of the corresponding <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>⫽</mo><mi>G</mi><mo>≔</mo><msup><mi>ℂ</mi> <mn>2</mn></msup><mo>⫽</mo><mi>G</mi></mrow><annotation encoding="application/x-tex">X \sslash G \coloneqq \mathbb{C}^2\sslash G</annotation></semantics></math>.</p>
 
-<p>A strong version of the McKay correspondence is obtained when the <a class="existingWikiWord" href="/nlab/show/cohomology+theory">cohomology theory</a> is taken to be (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <em><a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a></em> (<a href="#GSV83">Gonzalez-Sprinberg &amp; Verdier 83</a>):</p>
+<p>A strong version of the McKay correspondence is obtained when the <a class="existingWikiWord" href="/nlab/show/cohomology+theory">cohomology theory</a> is taken be (<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <em><a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a></em> (<a href="#GSV83">Gonzalez-Sprinberg &amp; Verdier 83</a>):</p>
 
 <p>Here the McKay correspondence becomes an <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>K</mi> <mrow><msub><mi>G</mi> <mi>ADE</mi></msub></mrow></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K_{G_{ADE}}(\ast)</annotation></semantics></math> of an <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> (equivalently the <a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><msub><mi>G</mi> <mi>ADE</mi></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G_{ADE})</annotation></semantics></math>) to the plain <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mover><mi>X</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">K(\tilde X)</annotation></semantics></math> of its <a class="existingWikiWord" href="/nlab/show/blow-up">blow-up</a> <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mover><mi>X</mi><mo stretchy="false">˜</mo></mover></mrow><annotation encoding="application/x-tex">\tilde X</annotation></semantics></math>. Much like in <a class="existingWikiWord" href="/nlab/show/topological+T-duality">topological T-duality</a>, this isomorphism is given by <a class="existingWikiWord" href="/nlab/show/integral+transform">integral transform</a> (<a class="existingWikiWord" href="/nlab/show/Fourier-Mukai+transform">Fourier-Mukai transform</a>) through the canonical <a class="existingWikiWord" href="/nlab/show/correspondence">correspondence</a> that these spaces constitute:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mi>X</mi><msub><mo>×</mo> <mrow><mi>X</mi><mo stretchy="false">/</mo><mi>G</mi></mrow></msub><mover><mi>X</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded width="0" lspace="-100%width"><mrow><msubsup><mi>p</mi> <mn>1</mn> <mo>*</mo></msubsup></mrow></mpadded></msup><mo>↗</mo></mtd> <mtd></mtd> <mtd><msup><mo>↘</mo> <mpadded width="0"><mrow><mi>Inv</mi><mo>∘</mo><mo stretchy="false">(</mo><msub><mi>p</mi> <mn>2</mn></msub><msub><mo stretchy="false">)</mo> <mo>*</mo></msub></mrow></mpadded></msup></mtd></mtr> <mtr><mtd><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mtd> <mtd><mo>≃</mo></mtd> <mtd><msub><mi>K</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mtd> <mtd></mtd> <mtd><mover><mo>⟶</mo><mo>≃</mo></mover></mtd> <mtd></mtd> <mtd><mi>K</mi><mo stretchy="false">(</mo><mover><mi>X</mi><mo stretchy="false">˜</mo></mover><mo stretchy="false">)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
@@ -856,19 +856,21 @@ margin-left: 0em;
 <p>Literature collection</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
-</ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></p>
 
-<p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
+<p>ver As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
+</li>
 
-<ul>
-<li id="GSV85"><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</li>
+<li id="GSV83">
+<p><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</p>
+</li>
 </ul>
 
 <p>An analogous discussion for <a class="existingWikiWord" href="/nlab/show/derived+categories">derived categories</a> of coherent sheaves is in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <a class="existingWikiWord" href="/nlab/show/Alastair+King">Alastair King</a>, <a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em>The McKay correspondence as an equivalence of derived categories</em> (<a href="http://www.ams.org/journals/jams/2001-14-03/S0894-0347-01-00368-X/S0894-0347-01-00368-X.pdf">pdf</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <a class="existingWikiWord" href="/nlab/show/Alastair+King">Alastair King</a>, <a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em>The McKay VerfdiVercorrespondence as an equivalence of derived categories</em> (<a href="http://www.ams.org/journals/jams/2001-14-03/S0894-0347-01-00368-X/S0894-0347-01-00368-X.pdf">pdf</a>)</li>
 </ul>
 </body></html>
 
@@ -876,14 +878,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 08:03:27.
+  Last revised on September 30, 2018 at 09:35:02.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/McKay correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
