--- a/pages/16757.html
+++ b/pages/16757.html
@@ -572,7 +572,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Discussion in terms of <a class="existingWikiWord" href="/nlab/show/hyper-K%C3%A4hler+geometry">hyper-Kähler geometry</a>:</p>
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/resolution+of+singularities">resolution</a> of ADE-singularities in terms of <a class="existingWikiWord" href="/nlab/show/hyper-K%C3%A4hler+geometry">hyper-Kähler geometry</a>:</p>
 
 <ul>
 <li id="Kronheimer89a">
@@ -582,6 +582,12 @@ margin-left: 0em;
 <li id="Kronheimer89b">
 <p><a class="existingWikiWord" href="/nlab/show/Peter+Kronheimer">Peter Kronheimer</a>, <em>A Torelli-type theorem for gravitational instantons</em>, J. Differential Geom. Volume 29, Number 3 (1989), 685-697 (<a href="https://projecteuclid.org/euclid.jdg/1214443067">euclid:1214443067</a>)</p>
 </li>
+</ul>
+
+<p>and in terms of preprojective algebras:</p>
+
+<ul>
+<li id="CBH98">William Crawley-Boevey, Martin P. Holland, <em>Noncommutative deformations of Kleinian singularities</em>, Duke Math. J. Volume 92, Number 3 (1998), 605-635 (<a href="https://projecteuclid.org/euclid.dmj/1077231679">euclid:1077231679</a>)</li>
 </ul>
 
 <p>Reviews and lecture notes include</p>
@@ -681,14 +687,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 09:00:55.
+  Last revised on September 30, 2018 at 10:23:26.
   See the <a href="https://ncatlab.org/nlab/history/ADE singularity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/ADE+singularity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ADE+singularity/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/ADE+singularity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ADE+singularity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/ADE+singularity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/ADE+singularity/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/ADE+singularity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/ADE+singularity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/ADE singularity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
