--- a/pages/19711.html
+++ b/pages/19711.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9032/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9032/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -318,7 +318,17 @@ margin-left: 0em;
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/McKay+correspondence">McKay correspondence</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/geometric+invariant+theory">geometric invariant theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/McKay+correspondence">McKay correspondence</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Bridgeland+stability+condition">Bridgeland stability condition</a></p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -326,14 +336,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 22, 2018 at 08:47:36.
+  Last revised on September 30, 2018 at 11:38:42.
   See the <a href="https://ncatlab.org/nlab/history/Alastair King" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alastair+King" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Alastair+King" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alastair+King/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Alastair+King" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alastair+King" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Alastair King/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
